dev/test_programs/INVALID/group12/scan_parse_errors/newline_error.go
// "else" is on a new line

package main


func main() {
	x := 5
	if (x<2) {
		print()
	}
	else {
		print()
	}
}